bmi calculator draft

--- a/hello_world/index.html
+++ b/hello_world/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
    <script>
-       //Skapa ny variabel och stoppar in nytt element
+       //We created a new HTML Node, a <div>, and stored it in a constant
        let newNode = document.createElement('div')
-       //HTML i nytt element = text
+       //We assigned some HTML markup to the new node
        newNode.innerHTML = '<h1>Hello World by JS</h1>'
        newNode.style.color = 'red'
-       //Lägg till child (newNode) i dokuementet 
+       //We attached the new node to the <body> part of our HTML page.
        document.body.appendChild(newNode)
    </script>
 </body>
