--- a/bmi_calculator/index.html
+++ b/bmi_calculator/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <script>
+        // Head 1
         let newNode = document.createElement('div')
         newNode.innerHTML = '<h1>Welcome to the BMI calculator!</h1>'
         newNode.style.color = 'lightpink'
         document.body.appendChild(newNode)
-
+        // Head 2
         let nextNode = document.createElement('div')
         nextNode.innerHTML = '<h2>Enter your values and click the button to get your BMI value: </h2>'
         document.body.appendChild(nextNode)
