--- a/bmi_calculator/index.html
+++ b/bmi_calculator/index.html
@@ -28,7 +28,7 @@
         "<h3>Enter your values and click the button or press ENTER to get your BMI value: </h3>";
       document.body.appendChild(nextNode);
     </script>
-    <input type="text" id="weight" placeholder="Weight in kg" />
+    <input type="text" id="weight" placeholder="Weight in kg"/>
     <input type="text" id="height" placeholder="Height in cm" />
     <button id="calculate">Calculate</button>
     <div id="results"></div>
@@ -37,7 +37,7 @@
     <script>
       const handlePress = () => {
         if (event.keyCode === 13) {
-          calculateBmi()
+          calculateBmi();
         }
       };
     </script>
