--- a/user_management/index.html
+++ b/user_management/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/style/style.css">
   </head>
   <body>
-    <h1>All users</h1>
+      <script>   let newNode = document.createElement("div");
+        newNode.innerHTML = "<h1>All Users</h1>";
+        newNode.style.color = "lightpink";
+        document.body.appendChild(newNode);
+        </script>
+
+ 
     <div id="users"></div>
     <script src="./assets/js/app.js"></script>
   </body>
